########################
# Set up Configuration #
########################
[metadata]
name = GenePy
version = 0.1.3
description =
long_description = file: README.md

url = https://github.com/AldisiRana/GenePy-1.3

author =
author_email =

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    genetics
    scoring

[options]
install_requires =
    pandas
    numpy
    click
    pybiomart
    statsmodels
    tqdm


zip_safe = false
python_requires = >= 3

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    genepy = genepy.cli:main